fix some bugs and hig

--- a/MaiInHerLoop/Resources/Localizable/en.lproj/Localizable.strings
+++ b/MaiInHerLoop/Resources/Localizable/en.lproj/Localizable.strings
@@ -86,3 +86,6 @@
 "scenariolist.region.south" = "South";
 "scenariolist.region.central" = "Central";
 "scenariolist.region.north" = "North";
+
+"mission.classified" = "Not Done";
+"mission.responded" = "Done";
