add scripts, god bless me

--- a/MaiInHerLoop/Resources/Localizable/en.lproj/Localizable.strings
+++ b/MaiInHerLoop/Resources/Localizable/en.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "diary.entry.hint" = "Open diary entry";
 
  "dispatch.scroll_guide" = "scroll to read the briefing";
- "reflection.result.header" = "YOUR ARCHETYPE";
+ "reflection.result.header" = "IN PEOPLE'S EYES, YOU ARE LIKE";
  "ui.chronicles.title" = "CHRONICLES";
  "scenariolist.header" = "MISSION BOARD";
  "scenariolist.subheader" = "Choose your mission";
